--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        SPi by guoc <br>
+        SPi by guoc<br>
+        <a href="http://spi.guoc.name/privacy/">隐私政策</a><br>
         Theme by John Otander
       </small>
     </div>
