Fix: Wrong privacy policy link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="measure mt1 center">
       <small>
         SPi by guoc<br>
-        <a href="http://spi.guoc.name/privacy/">隐私政策</a><br>
+        <a href="{{ site.baseurl }}/privacy/">隐私政策</a><br>
         Theme by John Otander
       </small>
     </div>
