--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        SPi by guoc<br>
+        <a href="http://tflig.ht/1vTaaSF">参与内测</a><br>
         <a href="{{ site.baseurl }}/privacy/">隐私政策</a><br>
+        SPi by guoc<br>
         Theme by John Otander
       </small>
     </div>
