--- a/SPiKeyboard/AdvanceInputHistoryRowCell.xib
+++ b/SPiKeyboard/AdvanceInputHistoryRowCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="inputHistoryRowCell" id="8uY-eh-IFN" customClass="InputHistoryRowCell" customModule="SPiKeyboard" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="inputHistoryRowCell" id="8uY-eh-IFN" userLabel="AdvanceinputHistoryRowCell" customClass="InputHistoryRowCell" customModule="SPiKeyboard" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8uY-eh-IFN" id="P5i-mc-Nk0">
