Change beta testing form.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        <a href="http://tflig.ht/1vTaaSF">参与内测</a><br>
+        <a href="{{ site.baseurl }}/beta/">参与内测</a><br>
         <a href="{{ site.baseurl }}/privacy/">隐私政策</a><br>
         SPi by guoc<br>
         Theme by John Otander
