Change "参与内测" to "App Store 下载" icon and link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        <a href="{{ site.baseurl }}/beta/">参与内测</a><br>
+        <a href="https://itunes.apple.com/app/spi-shuang-pin-shu-ru-fa/id947718764?ls=0" target="_blank" title="点击不会自动打开 iTunes">
+          <img src="images/Download_on_the_App_Store_Badge_CN_135x40.png" alt="Download on App Store" style="width:135px;height:40px"><br>
+        </a>
+<!--         <a href="{{ site.baseurl }}/beta/">参与内测</a><br> -->
         <a href="{{ site.baseurl }}/privacy/">隐私政策</a><br>
         SPi by guoc<br>
         Theme by John Otander
